--- a/.github/workflows/njsscan.yml
+++ b/.github/workflows/njsscan.yml
@@ -12,11 +12,17 @@ jobs:
         node-version: [15.9.0] #指定node版本
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }} #使用action安装node环境
-      uses: actions/setup-node@v1
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install express
-    - run: npm install fs
-    - run: npm install body-parser
-    - run: nodejs app.js 
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flask
+    - name: Build and publish
+      env:
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: |
+        python main.py
