--- a/.github/workflows/njsscan.yml
+++ b/.github/workflows/njsscan.yml
@@ -17,4 +17,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flask
+    - name: run main    
         python main.py
