--- a/.github/workflows/njsscan.yml
+++ b/.github/workflows/njsscan.yml
@@ -18,4 +18,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install flask
     - name: run main    
+      run: |
         python main.py
