--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,11 @@
 name: Python application
 
 on:
- schedule:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+  schedule:
     - cron: '25 */2 * * *'
 
 jobs:
