--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ on:
   pull_request:
     branches: [ "master" ]
   schedule:
-    - cron: '30 */2 * * *'
+    # 每两小时执行一次
+    - cron: "40 * * * *"
 
 jobs:
   build:
