--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "master" ]
   schedule:
     # 每两小时执行一次
-    - cron: "*/2 * * * *"
+    - cron: '* * * * *'
 
 jobs:
   build:
